examples/test/testpolicy16695.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16695
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key24: value49
      key0: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value31
          key49: value36
      podSelector:
        matchLabels:
          key6: value12
          key30: value9
